feat: create query to find the nearest store that has coverage area to specific point

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,6 @@ spring:
     mongodb:
       port: 27017
       host: localhost
-      database: ze-delivery
+#      database: ze-delivery
+      database: testing-db
       auto-index-creation: true
